--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "dimsav/laravel-translatable": "^7.2",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "spatie/crawler": "^2.1",
+        "weidner/goutte": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
